Update Micronaut Htp client guide